# CasioMini3D

./: .gitignore  CMakeLists.txt
V2/: CMakeLists.txt
V2/Versions/1/src/: world.cpp
V2/Versions/2/src/: display.hpp  main.cpp  world.cpp  world.hpp
V2/Versions/3/src/: types.hpp  world.cpp
V2/Versions/4/src/: main.cpp  types.hpp  world.cpp  world.hpp
V2/Versions/5/src/: types.hpp  world.cpp
V2/assets/: fxconv-metadata.txt
V2/src/: custom_math.hpp  display.cpp  fixed.hpp  main.cpp  world.cpp  world.hpp
src/: Projection copy 2.c  Projection copy.c  Projection.c  Projection.h  fixed.h  main.c
v1/src/: Projection.c  Projection.h  fixed.h  main.c
v1/test/: test.c  test.py
v1/test/WarpPerspective/: Makefile  fixed.h  main  main.c  warpPerspective.c  warpPerspective.h
